[package]
name = "cnfgen"
authors = ["Mateusz Szpakowski"]
license = "LGPL-2.1-or-later"
version = "0.2.0"
edition = "2021"
description = "Generate DIMACS CNF formulae from operations"
keywords = ["cnf", "logic", "cnfgen", "SAT"]
categories = ["science", "logic", "mathematics"]

[dependencies]
itoap = "1.0"
thiserror = "1.0"
generic-array = "0.14"
