[package]
name = "cnfgen"
authors = ["Mateusz Szpakowski"]
license = "LGPL-2.1-or-later"
version = "0.5.1"
edition = "2021"
description = "Generate DIMACS CNF formula from operations"
repository = "https://github.com/matszpk/cnfgen"
documentation = "https://docs.rs/cnfgen"
keywords = ["cnf", "logic", "cnfgen", "SAT"]
categories = ["science", "mathematics"]

[dependencies]
itoap = "1.0"
thiserror = "1.0"
generic-array = "0.14"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
